# specflo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hatch_build.py  pyproject.toml
skills/auto/: SKILL.md
skills/brainstorm/: SKILL.md
skills/execute/: SKILL.md
skills/plan/: SKILL.md
skills/research/: SKILL.md
skills/shelve/: SKILL.md
skills/spec/: SKILL.md
skills/specflo-auto/: SKILL.md
skills/specflo-brainstorm/: SKILL.md
skills/specflo-execute/: SKILL.md
skills/specflo-plan/: SKILL.md
skills/specflo-research/: SKILL.md
skills/specflo-shelve/: SKILL.md
skills/specflo-spec/: SKILL.md
src/specflo/: __init__.py  auto.py  brainstorm.py  checkpoint.py  cli.py  config.py  continuation.py  errors.py  extension_install.py  guide.py  hook.py  markdown.py  plan.py  projects.py  spec.py  status.py  validators.py  workflow.py
src/specflo/extension/: package.json
src/specflo/extension/src/: index.ts
src/specflo/extension/test/: abort.test.ts  arming.test.ts  auto-fire.e2e.test.ts  auto-fire.test.ts  auto-helpers.ts  chain.e2e.test.ts  cold-start.e2e.test.ts  cold-start.test.ts  continue-command.e2e.test.ts  continue-command.test.ts  fake-ctx.ts  index.js  loads.e2e.test.ts  notice.e2e.test.ts  notice.test.ts  rpc-harness.ts  sail-on.e2e.test.ts  seam.test.ts
src/specflo/skills/: .gitkeep
tests/: conftest.py  test_auto.py  test_brainstorm.py  test_checkpoint.py  test_cli.py  test_config.py  test_continuation.py  test_docs_ascii.py  test_entrypoint.py  test_execute_skill.py  test_extension_guards.py  test_extension_install.py  test_guide.py  test_hook.py  test_markdown.py  test_packaging.py  test_plan.py  test_plan_skill.py  test_projects.py  test_research_skill.py  test_shelve_skill.py  test_skill.py  test_skill_roots.py  test_skills_lifecycle.py  test_spec.py  test_spec_skill.py  test_stale_notice.py  test_status.py  test_validators.py  test_workflow.py
tests/fixtures/: research-digest.md
