[project]
name = "specflo"
version = "0.1.1"
description = "Spec-driven software-engineering workflow CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "agentsquire>=0.5.0",
]

[project.scripts]
specflo = "specflo.cli:main"

# Mark specflo as a skill-carrying package for agentsquire. Inert today (nothing
# reads it); reserved for a future environment-wide listing of such packages.
[project.entry-points.'agentsquire.skills']
specflo = "specflo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specflo"]

# Ship the repo-root skills/ as agentsquire Root B package data. One line copies
# the whole tree into the wheel at specflo/_repo_skills/<name>/ (NOT
# specflo/skills, which would duplicate Root A and raise DuplicateSkillError).
# The sdist carries the source skills/ (hatchling includes VCS-tracked files by
# default), so a wheel built from the sdist reproduces the same Root B.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "specflo/_repo_skills"

# Build-time completeness guard: fail the build if a required repo skill has been
# dropped. Pure check -- it adds no force-include (the line above owns that).
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
