[project]
name = "specflo"
version = "0.4.1"
description = "Spec-driven software engineering for coding agents: a CLI plus skills driving a brainstorm -> spec -> plan -> execute loop with artifacts on disk"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["ai-agents", "spec-driven-development", "claude-code", "workflow", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12",
    # Imported directly by cli.py to catch click's control-flow exceptions;
    # declared explicitly rather than leaning on typer/agentsquire to pull it in.
    "click>=8.1",
    "pyyaml>=6.0",
    "agentsquire>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/TacoTakumi/specflo"
Repository = "https://github.com/TacoTakumi/specflo"
Changelog = "https://github.com/TacoTakumi/specflo/blob/main/CHANGELOG.md"
Issues = "https://github.com/TacoTakumi/specflo/issues"

[project.scripts]
specflo = "specflo.cli:main"

# Mark specflo as a skill-carrying package for agentsquire. Inert today (nothing
# reads it); reserved for a future environment-wide listing of such packages.
[project.entry-points.'agentsquire.skills']
specflo = "specflo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specflo"]

# Ship the repo-root skills/ as agentsquire Root B package data. One line copies
# the whole tree into the wheel at specflo/_repo_skills/<name>/ (NOT
# specflo/skills, which would duplicate Root A and raise DuplicateSkillError).
# The sdist carries the source skills/ (hatchling includes VCS-tracked files by
# default), so a wheel built from the sdist reproduces the same Root B.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "specflo/_repo_skills"

# Build-time completeness guard: fail the build if a required repo skill has been
# dropped. Pure check -- it adds no force-include (the line above owns that).
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
